bk_ida/gccida/c2/cse_insn
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/cse_insn/src/cse.c:5228:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v17; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/cse_insn/src/cse.c:5229:4: error: expected ';' after expression
rtx v18; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/cse_insn/src/cse.c:5229:5: error: use of undeclared identifier 'v18'
rtx v18; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/cse_insn/src/cse.c:5255:4: error: expected ';' after expression
rtx v44; // r15 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/cse_insn/src/cse.c:5255:5: error: use of undeclared identifier 'v44'
rtx v44; // r15 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/cse_insn/src/cse.c:5258:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v47; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/cse_insn/src/cse.c:5275:4: error: expected ';' after expression
rtx v64; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/cse_insn/src/cse.c:5275:5: error: use of undeclared identifier 'v64'
rtx v64; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/cse_insn/src/cse.c:5304:4: error: expected ';' after expression
rtx v93; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/cse_insn/src/cse.c:5304:5: error: use of undeclared identifier 'v93'
rtx v93; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/cse_insn/src/cse.c:5310:4: error: expected ';' after expression
rtx v99; // r14 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/cse_insn/src/cse.c:5310:5: error: use of undeclared identifier 'v99'
rtx v99; // r14 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/cse_insn/src/cse.c:5312:4: error: expected ';' after expression
rtx v101; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/cse_insn/src/cse.c:5312:5: error: use of undeclared identifier 'v101'
rtx v101; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/cse_insn/src/cse.c:5314:4: error: expected ';' after expression
rtx inner_dest; // r12 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/cse_insn/src/cse.c:5314:5: error: use of undeclared identifier 'inner_dest'
rtx inner_dest; // r12 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/cse_insn/src/cse.c:5325:6: error: use of undeclared identifier 'p_inner_dest'
rtx *p_inner_dest; // r13 
     ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/cse_insn/src/cse.c:5337:4: error: expected ';' after expression
rtx v126; // r12 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/cse_insn/src/cse.c:5337:5: error: use of undeclared identifier 'v126'
rtx v126; // r12 
    ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/cse_insn/src/obj/cse.o] Error 1
